# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml  coverage.yml
cmake/: TestDepend.cmake
include/CHEN/: division.h
src/: division.cpp  main.cpp
test/: CMakeLists.txt  DI_test.cpp  DemoBenchtest.cpp  DemoDoctest.cpp  DemoDoctest2.cpp  test1.cpp  test2.cpp
